--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
       </div>
     </div>
     <div class="ui">
+      <div class="blockchain-status" id="blockchain-status" style="position: absolute; top: 10px; right: 10px; background: rgba(0,0,0,0.7); color: white; padding: 5px; border-radius: 5px; font-size: 12px;">
+        Blockchain: <span id="blockchain-status-text">Not Connected</span>
+      </div>
+    </div>
+    <div class="ui">
       <div class="inventory" id="inventory">
         <div class="inventory-inner">
           <div class="inventory-title">Inventory</div>
