--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
   <link href="https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon+SC&display=swap" rel="stylesheet">
 </head>
 <body>
+  <!-- Import map for Linera client (will be used if available) -->
+  <script type="importmap">
+    {
+      "imports": {
+        "@linera/client": "./node_modules/@linera/client/dist/linera_web.js"
+      }
+    }
+  </script>
+  
   <script src="./src/main.js" type="module">
   </script>
   <div class="container" id="container">
