feat: convert UI and weapon icons to WebP
- Convert 11 UI and weapon icons from PNG to WebP
- Update HTML and CSS references to use WebP versions
- Significant size reductions:
  * UI icons: 68-95% savings (227KB → 12.5KB for inventory-character)
  * Weapon icons: 66-94% savings
  * Total icon assets: ~400KB → 4KB
- Remove original PNG files after successful WebP conversion

--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
       <div class="icon-ui">
         <div class="icon-bar" id="icon-bar">
           <div class="icon-bar-item" id="icon-bar-stats"
-            style="background-image: url('./resources/icons/ui/skills.png');"></div>
+            style="background-image: url('./resources/icons/ui/skills.webp');"></div>
           <div class="icon-bar-item" id="icon-bar-inventory"
-            style="background-image: url('./resources/icons/ui/backpack.png');"></div>
+            style="background-image: url('./resources/icons/ui/backpack.webp');"></div>
           <div class="icon-bar-item" id="icon-bar-quests"
-            style="background-image: url('./resources/icons/ui/tied-scroll.png');"></div>
+            style="background-image: url('./resources/icons/ui/tied-scroll.webp');"></div>
         </div>
       </div>
     </div>
